[package]
name = "cortex"
version = "0.4.3"
edition = "2018"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]
license = "MIT"
repository = "https://github.com/dginev/cortex"
description = """
A general purpose processing framework for corpora of scientific documents
"""
default-run = "frontend"

[lib]
name = "cortex"
crate-type = ["rlib","staticlib"]

[[bin]]
name = "frontend"
path = "bin/frontend.rs"

[[bin]]
name = "dispatcher"
path = "bin/dispatcher.rs"

[[bin]]
name = "cache_worker"
path = "bin/cache_worker.rs"

[[bin]]
name = "init_worker"
path = "bin/init_worker.rs"

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies.pericortex]
git = "https://github.com/dginev/cortex-peripherals.git"
version = "0.2.4"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "tera_templates"]

[dependencies]
regex = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
  <<<<<<< dependabot/cargo/sys-info-0.9.0
sys-info = "0.9.0"
  =======
# For now experimenting with both sysinfo and sys-info crates, should make a decision eventually...
sys-info = "0.5.6"
sysinfo = "0.10"
  >>>>>>> dependabot/cargo/redis-0.20.0
glob = "0.3.0"
rand = "0.8.0"
tempfile = "3"
time = "0.1.4"
redis = "0.20.0"
gnuplot = "0.0.37"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
futures = "0.1"
  <<<<<<< loading-info-messages
hyper = "0.11"
hyper-tls = "0.1"
url="1.7"
tokio-core = "0.1"
zmq = "0.8.2"
zmq-sys = "0.8.2"
dotenv = "0.13"
dotenv_codegen = "0.11"
diesel = {version="=1.3.2", features = ["postgres"]}
libxml = "0.2.2"
lazy_static = "1.0.0"
  =======
hyper = "0.12"
hyper-tls = "0.3"
percent-encoding = "2.0.0"
tokio-core = "0.1.17"
zmq = "0.9.0"
zmq-sys = "0.11.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = {version="1.4", features = ["postgres", "chrono"]}
libxml = "0.2.13"
lazy_static = "1.0.0"
  <<<<<<< dependabot/cargo/sys-info-0.9.0
  >>>>>>> dependabot/cargo/sys-info-0.9.0
 
  =======
google-signin = "0.3"
  >>>>>>> dependabot/cargo/redis-0.20.0
